<resources>
    <string name="app_name">Pizza Application</string>
    <string name="title_home">Home</string>
    <string name="pizza_name">Pizza Name</string>
    <string name="description">Description</string>
    <string name="add_dish">Add Dish</string>
    <string name="invalid_name">Please enter valid Name</string>
    <string name="invalid_description">Please enter valid description</string>
    <string name="add_dish_success">Dish added successfully.</string>
    <string name="title_pizza_list">Pizza List</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_add_pizza">Add Pizza</string>
    <string name="title_pizza_details">Pizza Details</string>
    <string name="no_data_available">No Data Available</string>
    <string name="add">Add</string>
</resources>